# cs530-project

./: Final Project Deliverables  (ROUGH_DRAFT).docx  Final Project Deliverables (ROUGH_DRAFT).docx  config.toml  gesture.py  main.py  pyproject.toml  requirements.txt
