[tool.poetry]
name = "cs530-project"
version = "0.1.0"
license = "GPL3"
description = "CS-530: Systems Programming with Ben Shen (Fall 2021)"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
numpy = "^1.21.2"
keras = "^2.6.0"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
